# Camel-toolkits-mcp

./: .pre-commit-config.yaml  README.md  pyproject.toml  router.py
.github/workflows/: publish.yml  tests.yml
camel_toolkits_mcp/: __init__.py  __main__.py  router.py  server.py
tests/: __init__.py  test_router.py
